修改condition 多选，互斥

--- a/Front/src/tpl/flow-edit.html
+++ b/Front/src/tpl/flow-edit.html
@@ -150,13 +150,13 @@
               Add condition <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" uib-dropdown-menu role="menu">
-              <li role="menuitem" ng-repeat="cdt in allConditions | filter:{id:'!custom'}">
+              <li role="menuitem" ng-repeat="cdt in allConditions | filter:{id:'!custom'} | filter:notInNewCondFilter">
                 <a ng-click="addCondition(cdt)">{{cdt.display}}</a>
               </li>
               <li class="dropdown-submenu">
                 <a>Custom variables...</a>
                 <ul class="dropdown-menu">
-                  <li role="menuitem" ng-repeat="cdt in allConditions | filter:{id:'custom'}">
+                  <li role="menuitem" ng-repeat="cdt in allConditions | filter:{id:'custom'} | filter:notInNewCondFilter">
                     <a ng-click="addCondition(cdt)">{{cdt.display}}</a>
                   </li>
                 </ul>
