--- a/Front/src/tpl/flow-edit.html
+++ b/Front/src/tpl/flow-edit.html
@@ -343,6 +343,12 @@
           </li>
         </ul>
       </div>
+    </form>
+    <div class="cs-save-errors" ng-show="showErrors">
+      <span class="cs-hide-errors" ng-click="hideErrors()"><i class="icon-remove"></i></span>
+      <ul>
+        <li ng-repeat="err in saveErrors track by $index">{{err}}</li>
+      </ul>
     </div>
 
     <div name="editPathForm" method="post" ng-submit="$event.preventDefault()" class="editPathForm" ng-if="onEdit=='path'">
@@ -519,12 +525,6 @@
         Close
       </button>
     </div>
-  </div>
-  <div class="cs-save-errors" ng-show="showErrors">
-    <span class="cs-hide-errors" ng-click="hideErrors()">x</span>
-    <ul>
-      <li ng-repeat="err in saveErrors track by $index">{{err}}</li>
-    </ul>
   </div>
   <div ng-if="initState=='init'" class="masking-loader" translate></div>
   <div ng-class="{loader: initState=='init'}"></div>
