--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -87,6 +87,8 @@
 <script src="js/services/constants.js"></script>
 <script src="js/services/download.js"></script>
 <script src="js/controllers/signin.js"></script>
+<script src="js/controllers/resetPassword.js"></script>
+<script src="js/controllers/resetPasswordInfo.js"></script>
 <script src="js/controllers/profile.js"></script>
 <script src="js/controllers/setUp.js"></script>
 <script src="js/controllers/conversionUpload.js"></script>
