--- a/Front/src/tpl/signin.html
+++ b/Front/src/tpl/signin.html
@@ -32,6 +32,7 @@
                 >
                     {{ 'signin' | translate}}
                 </button>
+                <a class="forgot-pwd" ng-click="resetPassword()">Forgot your password?</a>
                 <div class="line line-dashed"></div>
                 <p class="text-center sign-text">
                     <small>Do not have an account?</small><a ui-sref="access.signup" class="btn signup-btn">Create an account</a>
