--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -3,7 +3,7 @@
         <!-- <md-button class="md-icon-button" hide-gt-sm ng-click="toggleLeftNav()" aria-label="Toggle Left Nav">
             <md-icon>menu</md-icon>
         </md-button> -->
-        <h1><img src="../assets/img/logo-three.png"></h1>
+        <h1><a class="home-link" ui-sref="app.report.campaign"><img src="../assets/img/logo-three.png"></a></h1>
         <div flex></div>
         <div class="changeplan hide">
             <a href="#">Choose Plan<i class="icon-choose fonts28"></i></a>
