--- a/Front/src/tpl/botBlacklist.html
+++ b/Front/src/tpl/botBlacklist.html
@@ -20,7 +20,8 @@ The maximum amount of the bot rules that can be created is {{blacklistCount}}. Y
       <md-button class="md-raised add-another-btn"><i class="material-icons">delete</i>Delete</md-button> -->
     </div>
     <div class="data-table">
-      <table class="table">
+        <div class="table-box">
+            <table class="table">
         <thead>
           <tr>
             <th>Bot</th>
@@ -49,6 +50,7 @@ The maximum amount of the bot rules that can be created is {{blacklistCount}}. Y
         </tr>
         </tbody>
       </table>
+        </div>
     </div>
   </div>
 
