--- a/Front/src/tpl/ts-reference-dialog.html
+++ b/Front/src/tpl/ts-reference-dialog.html
@@ -6,15 +6,20 @@
     </md-toolbar>
     <md-dialog-content class="md-dialog-content">
         <form name="editForm" ng-submit="ctrl.save()" class="form-horizontal">
-            <!-- <div class="form-group">
+            <div class="form-group">
                 <label class="col-sm-3 control-label">Name<span class="star-icon">*</span>:</label>
                 <div class="col-sm-8">
-                    <input type="text" name="name" class="form-control" ng-model="formData.name" required/>
+                    <input type="text" name="name" class="form-control"
+                      ng-model="formData.name"
+                      required
+                      ng-blur="checkName(formData.name)"
+                    />
                     <span class="text-danger" ng-show="(editForm.name.$touched || editForm.$submitted)&& editForm.name.$invalid">
                         <span ng-show="editForm.name.$error.required">Name is required.</span>
+                        <span ng-show="editForm.name.$error.checkName">Name already exists.</span>
                     </span>
                 </div>
-            </div> -->
+            </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">TS<span class="star-icon">*</span>:</label>
                 <div class="col-sm-8">
