--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -88,7 +88,7 @@
 
             <a ng-hide="perfType == 'campaign'" ng-click="addNewCampaign()">
               <md-button
-                class="md-raised md-primary cs-compact cs-add-button blue-btn"
+                class="md-raised md-primary cs-compact cs-add-button green-btn"
                 translate
               >
                 <i class="icon-plus"></i>
