修改全屏高度

--- a/Front/src/tpl/dashBoard.html
+++ b/Front/src/tpl/dashBoard.html
@@ -144,7 +144,7 @@
             </table>
         </div>
 
-        <div class="col-sm-12 col-md-7 chart-widget">
+        <div class="" flex>
             <div style="height:320px;float:right;width:100%; padding-left:20px;">
                 <canvas class="chart chart-line" chart-data="chart.data" chart-labels="chart.labels"
                         chart-series="chart.series" chart-options="chart.options"
