--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -67,6 +67,8 @@
 <script src="../bower_components/angular-awesome-slider/dist/angular-awesome-slider.min.js"></script>
 <script src="../bower_components/angular-momentjs/angular-momentjs.js"></script>
 <script src="../bower_components/angular-permission/dist/angular-permission.js"></script>
+<script src="../bower_components/qrcode/lib/qrcode.min.js"></script>
+<script src="../bower_components/angular-qr/angular-qr.min.js"></script>
 
 <!-- App -->
 <script src="js/app.js"></script>
