--- a/Front/src/tpl/edit-change-paln-dialog.html
+++ b/Front/src/tpl/edit-change-paln-dialog.html
@@ -44,14 +44,16 @@
                 </label>
               </div>
               <div class="alipay-code">
-                <img src="../assets/img/plan_0.jpg" ng-show="plans[0].id == id && payType == 0"/>
-                <img src="../assets/img/plan_1.jpg" ng-show="plans[1].id == id && payType == 0"/>
+                <div class="alipay-box" ng-show="payType == 0">
+                  <img src="../assets/img/plan_0.jpg"/>
+                  <qr type-number="2" correction-level="'M'" size="100" text="planUrl" image="true"></qr>
+                </div>
+                <!-- <img src="../assets/img/plan_1.jpg" ng-show="plans[1].id == id && payType == 0"/>
                 <img src="../assets/img/plan_2.jpg" ng-show="plans[2].id == id && payType == 0"/>
-                <img src="../assets/img/plan_3.jpg" ng-show="plans[3].id == id && payType == 0"/>
+                <img src="../assets/img/plan_3.jpg" ng-show="plans[3].id == id && payType == 0"/> -->
               </div>
-              <p ng-show="payType == 0" style="color:#666;text-align: center;">Please contact the Skype: <b>live:support_44609</b><br> to open your account after payment</p>
               <div ng-show="payType == 1">
-                
+
               </div>
             </div>
           </div>
