--- a/Front/src/tpl/flow-edit.html
+++ b/Front/src/tpl/flow-edit.html
@@ -500,8 +500,8 @@
     </div>
 
     <div class="cs-flow-bottom-actions clearfix" ng-show="flowMode">
-      <span class="cs-on-save" ng-show="onSave">Saving...</span>
-      <span class="cs-save-time" ng-show="saveTime">Saved at {{saveTime | date:'yyyy-MM-dd HH:mm:ss'}}</span>
+      <span class="cs-on-save" ng-show="onSave"><span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>Saving...</span>
+      <span class="cs-save-time" ng-show="saveTime"><i class="icon-ok"></i>Saved at {{saveTime | date:'yyyy-MM-dd HH:mm:ss'}}</span>
       <button class="btn btn-primary save-btn" ng-disabled="onSave" ng-hide="showContinue" ng-click="save()">
         <i class="icon-ok"></i>
         Save
