--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -85,6 +85,7 @@
 <script src="js/services/change-plan.js"></script>
 <script src="js/services/values.js"></script>
 <script src="js/services/constants.js"></script>
+<script src="js/services/download.js"></script>
 <script src="js/controllers/signin.js"></script>
 <script src="js/controllers/profile.js"></script>
 <script src="js/controllers/setUp.js"></script>
