--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -82,7 +82,9 @@
                     <md-option value="2">All</md-option>
                 </md-select>
             </div>
-            <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn" ng-click="applySearch($event)" translate>apply</md-button>
+            <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn" ng-click="applySearch()" translate>apply</md-button>
+
+            <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn" ng-click="downLoad($event)" translate>Export CSV</md-button>
 
             <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn" ng-click="editItem($event)" translate>add</md-button>
 
