--- a/Front/src/tpl/signup.html
+++ b/Front/src/tpl/signup.html
@@ -1,4 +1,4 @@
-<div class="container w-xxxxl w-auto-xs">
+<div class="container w-xxxxl w-auto-xs signup-top">
     <div class="navbar-brand block m-t"><img src="../assets/img/logo-two.png"></div>
     <div class="m-b-lg">
         <form name="form" class="form-horizontal">
@@ -78,7 +78,7 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-12 sign-input">
-                    <i class="icon-qq form-control-feedback" style="font-size: 16px; margin-left: -3px;"></i>
+                    <i class="icon-qq form-control-feedback" style="font-size: 14px; margin-left: -1px;"></i>
                     <input type="text" name="qq" placeholder="QQ" class="form-control"
                        ng-model="user.qq"
                        ng-required="!user.skype"
