修改图片分辨率

--- a/Front/src/tpl/edit-change-paln-dialog.html
+++ b/Front/src/tpl/edit-change-paln-dialog.html
@@ -46,7 +46,7 @@
               <div class="alipay-code">
                 <div class="alipay-box" ng-show="payType == 0">
                   <img src="../assets/img/plan_0.jpg"/>
-                  <qr type-number="2" correction-level="'M'" size="100" text="planUrl" image="true" ng-show="planUrl"></qr>
+                  <qr type-number="8" correction-level="'H'" size="100" text="planUrl" image="true" ng-show="planUrl"></qr>
                 </div>
                 <!-- <img src="../assets/img/plan_1.jpg" ng-show="plans[1].id == id && payType == 0"/>
                 <img src="../assets/img/plan_2.jpg" ng-show="plans[2].id == id && payType == 0"/>
