--- a/Front/src/tpl/offer-edit-dialog.html
+++ b/Front/src/tpl/offer-edit-dialog.html
@@ -36,8 +36,8 @@
                 <label class="col-sm-3 control-label">Url<span class="star-icon">*</span>：</label>
                 <div class="col-sm-7">
                     <input my-text="" type="text" name="url" class="form-control" ng-model="item.url" ng-blur="validateUrl()" required>
-                    <span style="color:red" ng-show="editForm.url.$dirty && editForm.url.$invalid">
-                    <span ng-show="editForm.url.$error.required">Url is required.</span>
+                    <span style="color:red" ng-show="editForm.url.$invalid">
+                    <span ng-show="editForm.url.$dirty && editForm.url.$error.required">Url is required.</span>
                     <span ng-show="editForm.url.$error.urlformat">URL must be a valid URL.</span>
                     </span>
                 </div>
