--- a/Front/src/tpl/lander-edit-dialog.html
+++ b/Front/src/tpl/lander-edit-dialog.html
@@ -35,8 +35,8 @@
                 <label class="col-sm-3 control-label">Url<span class="star-icon">*</span>：</label>
                 <div class="col-sm-7">
                     <input my-text="" type="text" name="url" class="form-control" ng-model="item.url" ng-blur="validateUrl()" required>
-                    <span style="color:red" ng-show="editForm.url.$dirty && editForm.url.$invalid">
-                    <span ng-show="editForm.url.$error.required">Url is required.</span>
+                    <span style="color:red" ng-show="editForm.url.$invalid">
+                    <span ng-show="editForm.url.$dirty && editForm.url.$error.required">Url is required.</span>
                     <span ng-show="editForm.url.$error.urlformat">URL must be a valid URL.</span>
                     </span>
                 </div>
@@ -69,7 +69,7 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Country: </label>
                 <div class="col-sm-7 my-select">
-                    <md-select class="cs-subform-select" name="country"
+                    <md-select aria-label="Country" class="cs-subform-select" name="country"
                         ng-disabled="countryInputDisabled"
                         ng-model="item.country"
                         ng-change="countryChanged(item.country)"
