--- a/Front/src/tpl/trafficSource-edit-dialog.html
+++ b/Front/src/tpl/trafficSource-edit-dialog.html
@@ -38,7 +38,7 @@
                 <label class="col-sm-3 control-label">Postback Url：</label>
                 <div class="col-sm-7">
                     <input my-text="" type="text" name="postbackUrl" class="form-control" ng-model="item.postbackUrl" ng-blur="validateUrl()">
-                    <span style="color:red" ng-show="editForm.postbackUrl.$dirty && editForm.postbackUrl.$invalid">
+                    <span style="color:red" ng-show="editForm.postbackUrl.$invalid">
                             <span ng-show="editForm.postbackUrl.$error.urlformat">URL must be a valid URL.</span>
                         </span>
                 </div>
