--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -84,7 +84,7 @@
             </div>
             <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn" ng-click="applySearch()" translate>apply</md-button>
 
-            <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn" ng-click="downLoad($event)" translate>Export CSV</md-button>
+            <md-button class="md-raised md-primary cs-compact cs-add-button down-btn" ng-click="downLoad($event)" translate><i class="icon-download-alt"></i>Export CSV</md-button>
 
             <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn" ng-click="editItem($event)" translate>add</md-button>
 
