--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -21,59 +21,8 @@
 </head>
 
 <body>
-<div id="main"><a href="javascript:showBg();"></a>
-    <div id="fullbg"></div>
-    <div id="dialog">
-        <p class="close"><a href="#" onclick="closeBg();"><i class="icon-remove"></i></a></p>
-        <div class="tutorial-box">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
-                </ol>
-                <div class="carousel-inner" role="listbox">
-                    <div class="item active">
-                        <img class="img-responsive" src="img/t-pic-01.png" alt="...">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive" src="img/t-pic-02.png" alt="...">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive" src="img/t-pic-03.png" alt="...">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive" src="img/t-pic-04.png" alt="...">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive" src="img/t-pic-05.png" alt="...">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive" src="img/t-pic-06.png" alt="...">
-                    </div>
-                    <div class="item">
-                        <img class="img-responsive" src="img/t-pic-07.png" alt="...">
-                    </div>
-
-                </div>
-                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                    <span class="icon-angle-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                    <span class="icon-angle-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
 <div class="nav-box navbar navbar-default navbar-fixed-top">
     <div class="navbar-header">
-
     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -89,34 +38,17 @@
         </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul id="myScrollspy" class="nav navbar-nav">
-            <li><a href="#section-2">
-                <span class="text">Feature</span>
-                <span class="line -right"></span>
-                <span class="line -top"></span>
-                <span class="line -left"></span>
-                <span class="line -bottom"></span>
-            </a>
-            </li>
+            <li><a class="dome-btn" href="#section-4">Dome</a></li>
+            <li><a href="#section-2">Feature</a></li>
             <li><a href="#section-1">
-                <span class="text">Pricing</span>
-                <span class="line -right"></span>
-                <span class="line -top"></span>
-                <span class="line -left"></span>
-                <span class="line -bottom"></span></a></li>
+                Pricing</a></li>
             <li><a href="#section-3">
-                <span class="text">Contact</span>
-                <span class="line -right"></span>
-                <span class="line -top"></span>
-                <span class="line -left"></span>
-                <span class="line -bottom"></span>
+                Contact
+
             </a>
             </li>
             <li class="sign-in"><a href="http://panel.newbidder.com/#/access/signin">
-                <span class="text">Sign in</span>
-                <span class="line -right"></span>
-                <span class="line -top"></span>
-                <span class="line -left"></span>
-                <span class="line -bottom"></span>
+                Sign in
             </a></li>
             <li class="sign-up"><a class="freetrial-btn" href="http://panel.newbidder.com/#/access/signup">Sign up</a></li>
         </ul>
@@ -147,7 +79,52 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+<div id="section-4" class="container">
+    <div class="tutorial-box">
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img class="img-responsive" src="img/t-pic-01.png" alt="...">
+                </div>
+                <div class="item">
+                    <img class="img-responsive" src="img/t-pic-02.png" alt="...">
+                </div>
+                <div class="item">
+                    <img class="img-responsive" src="img/t-pic-03.png" alt="...">
+                </div>
+                <div class="item">
+                    <img class="img-responsive" src="img/t-pic-04.png" alt="...">
+                </div>
+                <div class="item">
+                    <img class="img-responsive" src="img/t-pic-05.png" alt="...">
+                </div>
+                <div class="item">
+                    <img class="img-responsive" src="img/t-pic-06.png" alt="...">
+                </div>
+                <div class="item">
+                    <img class="img-responsive" src="img/t-pic-07.png" alt="...">
+                </div>
 
+            </div>
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="icon-angle-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="icon-angle-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
     </div>
 </div>
 <h2 id="section-1" class="title">Below you'll find our <b>pricing</b></h2>
