NB-268,NB-352,NB-360,NB-361,NB-368

--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -81,6 +81,7 @@
 <script src="js/directives/ui-butterbar.js"></script>
 <script src="js/directives/form-validator.js"></script>
 <script src="js/directives/fixed-table-header.js"></script>
+<script src="js/directives/fixed-table-footer.js"></script>
 <script src="js/services/resources.js"></script>
 <script src="js/services/change-plan.js"></script>
 <script src="js/services/values.js"></script>
