--- a/Front/src/tpl/signin.html
+++ b/Front/src/tpl/signin.html
@@ -10,7 +10,7 @@
     <p>Email with confirmation link has been sent.</p>
   </div>
     <div class="container w-xxl w-auto-xs w-top">
-        <div class="navbar-brand block m-t"><img src="../assets/img/logo-two.png"></div>
+        <a class="navbar-brand block m-t" target="_blank" href="http://www.newbidder.com"><img src="../assets/img/logo-two.png"></a>
         <div class="m-b-lg">
             <form name="form" class="form-validation">
                 <div class="list-group list-group-sm">
