--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -189,7 +189,7 @@
                 </td>
               </tr>
             </tbody>
-            <tfoot md-body>
+            <tfoot md-body fix-foot>
               <tr md-row>
                 <td md-cell ng-if="treeLevel>1"></td>
                 <td md-cell>Total</td>
@@ -205,3 +205,10 @@
     <md-table-pagination md-limit="query.limit" md-limit-options="[50, 100, 200, 500, 1000]" md-page="query.page"
                          md-total="{{report.totalRows}}" md-page-select></md-table-pagination>
 </div>
+<script>
+$(function(){
+    console.log($('.cs-app').height()+";"+$('header').height()+";"+$('nav').height());
+    console.log($(window).height() - $('header').height() - $('nav').height());
+    $('md-content').height($(window).height() - $('header').height() - $('nav').height());
+});
+</script>
