--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -10,6 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Performance Marketing Tracking!The Most Technologically Advanced Tracking Software in the Universe.Expand Today Your Performance &amp; Affiliate Marketing!"/>
     <meta name="keywords" content="Tracking,Affiliate Tracking,Tracker,SaaS,Newbidder">
     <title>Newbidder</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="x-icon" />
@@ -70,14 +71,14 @@
 <div class="jumbo-box">
     <a href="#" class="jumbo">
         <div class="jumbo-text-box">
-            <h1><b>1000000</b> E1vents Tracked Daily</h1>
+            <h1><b>1000000</b> Events Tracked Daily</h1>
             <div class="jumbo-text">
                 <div class="jumbo-text-top">
                     <b>50</b>
                     <span class="jump-off">% <em>OFF</em></span>
                     <span>sitewide</span>
                 </div>
-                <button class="jumbo-btn"><i class="icon-time"></i>9 Days Left</button>
+                <button class="jumbo-btn"><i class="icon-time"></i>8 Days Left</button>
 
             </div>
         </div>
@@ -587,9 +588,7 @@
     });
     // });
 </script>
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBmBABCOpmHVA-e2EhOjKO3AJF5Rn8opYc&sensor=false&callback=initialize&language=en-DE"></script>
-<script src="js/map.js"></script>
-<script src="js/jquery.fullPage.min.js" type="text/javascript"></script><script src="js/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 <script>
     $(function () {
@@ -642,4 +641,7 @@
         $("#fullbg,#dialog").hide();
     }
 </script>
+
+<script src="js/map.js"></script>
+<script src="js/jquery.fullPage.min.js" type="text/javascript"></script>
 </html>
