--- a/Front/src/tpl/dashBoard.html
+++ b/Front/src/tpl/dashBoard.html
@@ -126,9 +126,9 @@
             <table class="table table-hover" ng-repeat="tbl in tables">
               <thead>
                 <tr>
-                  <th></th>
+                  <th width="40"></th>
                   <th>{{tbl | ucfirst}}</th>
-                  <th>{{sortby | ucfirst}}</th>
+                  <th width="18%">{{sortby | ucfirst}}</th>
                 </tr>
               </thead>
               <tbody>
