--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -21,9 +21,27 @@
             </div>
         </a></div>
 
-
         <ul class="nav navbar-nav navbar-right">
             <!-- dropdown for user -->
+            <li class="dropdown" uib-dropdown>
+                <a href class="dropdown-toggle clear" uib-dropdown-toggle>
+                    <i class="icon-question-sign">
+                    </i>
+                    <span class="hidden-sm hidden-md text-md">Support</span>
+                    <i class="material-icons md-mini">&#xE313;</i>
+                </a>
+                <ul class="dropdown-menu animated fadeInRight w" uib-dropdown-menu>
+                    <li class="support-li">
+                        <a clipboard ng-click="copyCon()" text="emailCon"><b>Email</b>：<span ng-model="emailCon">support@newbidder.com</span></a>
+                    </li>
+                    <li class="support-li">
+                        <a clipboard ng-click="copyCon()" text="skypeCon"><b>Skype</b>：<span ng-model="skypeCon">live:support_44609</span></a>
+                    </li>
+                    <li class="support-li">
+                         <a clipboard ng-click="copyCon()" text="qqCon"><b>QQ group</b>：<span ng-model="qqCon">490922827</span></a>
+                    </li>
+                </ul>
+            </li>
             <li class="dropdown" uib-dropdown>
                 <a href class="dropdown-toggle clear" uib-dropdown-toggle>
                     <i class="icon-user fonts16">
