--- a/Front/src/tpl/reset-password.html
+++ b/Front/src/tpl/reset-password.html
@@ -6,7 +6,7 @@
                 <div class="list-group list-group-sm">
                     <div class="list-group-item">
                         <i class="icon-envelope form-control-feedback small-font icon-envelope-top"></i>
-                        <input type="email" placeholder="Email" class="form-control no-border" ng-model="user.email"
+                        <input type="email" placeholder="Email" class="form-control no-border" ng-model="email"
                                required>
                     </div>
                 </div>
