--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -64,7 +64,7 @@
       <div class="table-out table-out-coupon">
         <form name="couponForm" ng-submit="$event.preventDefault()">
           <div class="form-group" layout="row">
-            <input type="text" class="form-control form-control-two flex" style="height: 32px;" maxlength="32" name="coupon" ng-model="couponText" placeholder="Please input your coupon" required>
+            <input type="text" class="form-control form-control-two flex" style="height: 32px;" maxlength="32" name="coupon" ng-model="couponText" placeholder="Please input your coupon(length:32)" required>
 			      <md-button style="margin: 0;" class="md-raised copy-btn" ng-disabled="couponForm.coupon.$invalid || couponStatus" ng-click="changeCoupon(couponText)">Submit</md-button>
 		      </div>
         </form>
